fix(TextInput): add overflow hidden to text-input__content wrapper

--- a/src/components/controls/TextInput/TextInput.scss
+++ b/src/components/controls/TextInput/TextInput.scss
@@ -44,6 +44,7 @@ $block: '.#{variables.$ns}text-input';
 
     &__content {
         box-sizing: border-box;
+        overflow: hidden;
         display: flex;
         width: 100%;
     }
